--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ a {
     text-decoration: none;
     color: black;
 }
-.main {
+main {
     width: 100%;
     height: 100vh;
     background-color: hsl(47, 87%, 61%);
@@ -39,15 +39,15 @@ a {
     width: fit-content;
     padding: 5px 8px;
     border-radius: 5px;
-    margin: 10px 0;
+    margin: 15px 0;
     font-weight: 800;
 }
-.date{
-    font-size: 14px;
+.date, .date time{
+    font-size: 13px;
 }
 .link {
     display: block;
-    margin: 10px 0;
+    margin: 15px 0;
     font-weight: 800;
 }
 .link:hover{
@@ -55,7 +55,7 @@ a {
     
 }
 .details{
-    opacity: 0.8;
+    color: hsl(0, 0%, 50%);
     font-size: 14px;
 }
 
@@ -64,6 +64,7 @@ a {
     display: flex;
     align-items: center;
     width: 100%;
+    margin-bottom: 10px;
 }
 .user a{
     font-weight: 800;
